--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - PureFyul</title>
   <style>
@@ -321,6 +322,7 @@
       <p>We typically respond within 24-48 hours.</p>
     </div>
   </div>
+  <script src="{{ url_for('static', filename='js/navbar.js') }}" defer></script>
 </body>
 </html>
 
